--- a/ansible/playbooks/pb_initialize_docker_swarm.yaml
+++ b/ansible/playbooks/pb_initialize_docker_swarm.yaml
@@ -2,7 +2,7 @@
 - hosts: role_grand_master
   tasks:
   - name: initialize docker swarm
-    shell: docker swarm leave
+    shell: docker swarm leave --force
   - name: run the visualizer app for docker swarm
     shell: | 
       docker service create \
