--- a/k8s/base/admin-server-deployment.yaml
+++ b/k8s/base/admin-server-deployment.yaml
@@ -7,13 +7,13 @@ metadata:
     kompose.version: 1.22.0 (955b78124)
   creationTimestamp: null
   labels:
-    io.kompose.service: discovery-server
-  name: discovery-server
+    io.kompose.service: admin-server
+  name: admin-server
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: discovery-server
+      io.kompose.service: admin-server
   strategy: {}
   template:
     metadata:
@@ -23,20 +23,21 @@ spec:
         kompose.version: 1.22.0 (955b78124)
       creationTimestamp: null
       labels:
-        io.kompose.service: discovery-server
+        io.kompose.service: admin-server
     spec:
       containers:
-        - image: IMAGE_TAG_DISCOVERY_SERVER
-          name: discovery-server
+        - image: IMAGE_TAG_ADMIN_SERVER
+          name: admin-server
           ports:
-            - containerPort: 8761
+            - containerPort: 9090
           resources: {}
       imagePullSecrets:
         - name: regcred
       restartPolicy: Always
       
       initContainers:
-      - name: init-config-server
+      - name: init-discovery-server
         image: busybox
-        command: ['sh', '-c', 'until nc -z config-server:8888; do echo waiting for config-server; sleep 2; done;']
+        command: ['sh', '-c', 'until nc -z discovery-server:8761; do echo waiting for discovery-server; sleep 2; done;']
+      
 status: {}
