--- a/k8s/base/customers-service-ingress.yaml
+++ b/k8s/base/customers-service-ingress.yaml
@@ -6,6 +6,8 @@ metadata:
     kompose.image-pull-secret: regcred
     kompose.service.expose: desert18.com
     kompose.version: 1.22.0 (955b78124)
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+
   creationTimestamp: null
   labels:
     io.kompose.service: customers-service
@@ -18,5 +20,11 @@ spec:
           - backend:
               serviceName: customers-service
               servicePort: 8081
+            path: /api/gateway(/|$)(.*)
+
+          - backend:
+              serviceName: customers-service
+              servicePort: 8081
+            path: /api/customer(/|$)(.*)
 status:
   loadBalancer: {}
