--- a/k8s/base/visits-service-ingress.yaml
+++ b/k8s/base/visits-service-ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
     kompose.cmd: kompose convert -f /Users/ahmetkoleoglu/Desktop/DevOps/github/DevOps/DevOps/microservices-ci-cd-pipeline-app-microclinic/k8s/docker-compose.yml -o /Users/ahmetkoleoglu/Desktop/DevOps/github/DevOps/DevOps/microservices-ci-cd-pipeline-app-microclinic/k8s/base
     kompose.image-pull-secret: regcred
     kompose.service.expose: desert18.com
@@ -18,5 +19,6 @@ spec:
           - backend:
               serviceName: visits-service
               servicePort: 8082
+            path: /api/visit(/|$)(.*)
 status:
   loadBalancer: {}
