--- a/k8s/base/customers-service-ingress.yaml
+++ b/k8s/base/customers-service-ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     kompose.cmd: kompose convert -f /Users/ahmetkoleoglu/Desktop/DevOps/github/DevOps/DevOps/microservices-ci-cd-pipeline-app-microclinic/k8s/docker-compose.yml -o /Users/ahmetkoleoglu/Desktop/DevOps/github/DevOps/DevOps/microservices-ci-cd-pipeline-app-microclinic/k8s/base
     kompose.image-pull-secret: regcred
-    kompose.service.expose: desert18.com
+    kompose.service.expose: petclinicstaging.desert18.com
     kompose.version: 1.22.0 (955b78124)
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 
@@ -14,7 +14,7 @@ metadata:
   name: customers-service
 spec:
   rules:
-    - host: desert18.com
+    - host: petclinicstaging.desert18.com
       http:
         paths:
           - backend:
