--- a/k8s/base/visits-service-ingress.yaml
+++ b/k8s/base/visits-service-ingress.yaml
@@ -5,7 +5,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
     kompose.cmd: kompose convert -f /Users/ahmetkoleoglu/Desktop/DevOps/github/DevOps/DevOps/microservices-ci-cd-pipeline-app-microclinic/k8s/docker-compose.yml -o /Users/ahmetkoleoglu/Desktop/DevOps/github/DevOps/DevOps/microservices-ci-cd-pipeline-app-microclinic/k8s/base
     kompose.image-pull-secret: regcred
-    kompose.service.expose: petclinicstaging.desert18.com
+    kompose.service.expose: petclinic.desert18.com
     kompose.version: 1.22.0 (955b78124)
   creationTimestamp: null
   labels:
@@ -13,7 +13,7 @@ metadata:
   name: visits-service
 spec:
   rules:
-    - host: petclinicstaging.desert18.com
+    - host: petclinic.desert18.com
       http:
         paths:
           - backend:
