--- a/k8s/base/api-gateway-ingress.yaml
+++ b/k8s/base/api-gateway-ingress.yaml
@@ -6,11 +6,16 @@ metadata:
     kompose.image-pull-secret: regcred
     kompose.service.expose: petclinic.desert18.com
     kompose.version: 1.22.0 (955b78124)
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
   creationTimestamp: null
   labels:
     io.kompose.service: api-gateway
   name: api-gateway
 spec:
+  tls:
+    - hosts:
+      - petclinic.desert18.com
+      secretName: petclinic-tls
   rules:
     - host: petclinic.desert18.com
       http:
